using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class TrojanAI : BaseAI
{
    public List<GameObject> malware = new List<GameObject>();

    private void Awake()
    {
        manager = UnitManager.instance;
        anim = GetComponent<Animator>();
        startTurn = true;

        GetAggroList();
        SetAggroPriority("Objective");     
    }

    private void Update()
    {
        if (health <= 0)
        {
            GameObject character = Instantiate(malware[Random.Range(0, malware.Count - 1)], 
                transform.position, Quaternion.identity, manager.unitGroup.transform);
            character.transform.Rotate(0, 180, 0);

            manager.unitList.Remove(this);

            Destroy(gameObject);
            GameObject summonedDeath = Instantiate(deathExplosion);
            summonedDeath.transform.position = transform.position;
            Destroy(summonedDeath, 5);
        }

        if (isDetected)
        {
            aura.SetActive(false);
        }

        if (!startTurn && manager.selectedCharacter.name.Equals(transform.name))
        {
            if (InRange())
            {
                Action();
            }

            startTurn = true;
            manager.EndTurn();
        }
    }

    public override void Action()
    {
        if (target.CompareTag("Security Control") || target.name.Equals("Objective"))
        {
            transform.LookAt(target.transform);
            anim.SetTrigger("Attack");
            target.GetComponent<Unit>().health -= 10;

            if (target.GetComponent<Unit>().health <= 0)
            {
                target.GetComponent<Unit>().anim.SetTrigger("Dead");
            }
            else
            {
                target.GetComponent<Unit>().anim.SetTrigger("Hurt");
            }
        }

        else if (target.name.Equals("Data Structure"))
        {
            target.GetComponent<DataStructure>().isLocked = true;
            infectedDS.Add(target);
        }
    }
}
